2004-11-30  Andre Spiegel  <spiegel@gnu.org>

	* vc-hooks.el (vc-recompute-state): Moved here from vc.el.

	* vc-cvs.el (vc-cvs-state): Handle the case where vc-state is
	still nil.

2004-11-29  Luc Teirlinck  <teirllm@auburn.edu>

	* emulation/tpu-edt.el (tpu-help-keypad-map, tpu-help-text)
	(tpu-word-separator-list, tpu-skip-chars): defconst->defvar.

2004-11-29  Jay Belanger  <belanger@truman.edu>

	* calc/calc-arith.el (math-pow-of-zero): Take into account different
	cases of the base and exponent.

2004-11-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* simple.el (next-error-buffer-p): Allow for inclusive and
	exclusive tests for finding a buffer.
	(next-error-find-buffer): Pass the exclusive and inclusive tests
	to next-error-buffer-p.

	* replace.el (occur-next-error): Switch to the Occur buffer when
	appropriate, use the exclusive filter to next-error-find-buffer to
	do it.  Use the absolute value of the motion amount.

2004-11-29  Kenichi Handa  <handa@m17n.org>

	* startup.el (command-line): Decode all default-directory by
	locale-coding-system.

2004-11-29  Jay Belanger  <belanger@truman.edu>

	* calc/calc-aent.el: Remove unnecessary eval-when-compile.
	(calc-do-quick-calc, calc-do-calc-eval, calc-alg-entry)
	(math-read-expr-level, calc-check-user-syntax, math-read-factor):
	Replace calls to calc-extensions by appropriate require, replace
	calc-extensions-loaded by appropriate featurep.

	* calc/calc-ext.el: Move require to end of file.
	Remove redundant loading of calc.el.
	(calc-extensions-loaded): Remove unnecessary variable.
	(calc-extensions): Remove unnecessary function.
	(calc-load-everything): Replace calc-need-macros by appropriate require.

	* calc/calc-macs.el: Move provide to end of file.
	(calc-need-macros): Remove unnecessary function.

	* calc/calc-misc.el (calc-do-handle-whys, calc-last-args-stub)
	(calc-missing-key, calc-shift-Y-prefix-help, math-concat)
	(math-trunc, math-floor, calcFunc-inv, math-mod, math-pow):